Updated content and sections

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -35,51 +35,14 @@
 
 	<section id="meetings" class="background-green section-stacked-bars">
 		<div class="row h-left z-2">
-			<div class="col md-10 lg-9 xl-8">
-				<div class="bullet-group large">
-					<h2 class="h3 text-uppercase text-bold">Meetings</h2>
-					<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
-						work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
-					<a class="cta-button navy small carat" href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915"
-						target="_blank">Schedule Your Meeting Now</a>
-				</div>
+			<div class="col md-9 xl-8">
+					<h2 class="h3 text-uppercase text-bold">Upgrade Consultations, Tech Talks & Solution Talks</h2>
+					<p class="h4">Now that you’re registered for World, it’s time to start thinking about how to maximize your time in Phoenix. Book your Upgrade Consultation  to maximize your MicroStrategy 2019 experience. Reserve a Tech Talk to get expert feedback and accomplish your digital transformation goals faster. Meet with one of our executives  at a Solution Talk and learn how they utilize the MicroStrategy platform to enhance their day to day operations.</p>
 			</div>
-		</div>
-
-		<div class="row between margin-top-30 z-2">
-			<div class="col md-9">
-				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">1:1 MicroStrategy 2019 Consultation</h5>
-					<p>Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
-						your MicroStrategy 2019 experience. Learn more about how your organization can take advantage of the powerful
-						new functionalities available since the last platform release, including HyperIntelligence, the enterprise
-						semantic graph, dossiers, library and much more.</p>
-					<p>In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
-						also talk about new features like testing automation in the platform that help you upgrade. We’ll also discuss
-						how you can schedule a complimentary one-week Upgrade Advisory--where we send an expert to your location to help
-						conduct sandbox upgrading testing, build and deploy a HyperIntelligence pilot, and provide a detailed feature
-						value map and clear recommendations for a smooth upgrade.</p>
-				</div>
-			</div>
-			<div class="col md-6">
-				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">Solution Talks at World 2019</h5>
-					<p>New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
-						one-on-one with one of our executives to learn how numerous departments in MicroStrategy use our platform. Have
-						an interactive discussion, collaborate over strategies to apply a data-driven approach to your department, and
-						get detailed answers to any questions you may have.</p>
-					<a href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
-				</div>
-			</div>
-			<div class="col md-6">
-				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">Tech Talks at World 2019</h5>
-					<p>TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
-						dive on a variety of topics related to leveraging the MicroStrategy platform. Join our experts for an in-depth
-						conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.</p>
-					<a href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
-				</div>
-
+			<div class="col md-3 xl-4">
+					<a class= "cta-button navy small carat" href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019">Learn More about Tech Talks</a>
+					<a class="cta-button red small carat"  href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019">Learn More about Solution Talks</a>
+					<a href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915?mkt_tok=eyJpIjoiT1RWbE9XVTBOVGM1TUdZNCIsInQiOiJvQno0YUFoWklWZjZ1eVBnUFdta25tNmREMVRGWG42TGZDWHhqMWJkbFVBQ2NjVjJGNFVJVFB5R1FhZENmOEowOEZuRldpU1NkR3VGWWN1WE1hclwvcEE9PSJ9" class="cta-button blue carat">Register Today</a>
 			</div>
 		</div>
 		<div class="pattern-overlay z-1">
@@ -161,7 +124,7 @@
 
 		<section class="background-gradient-blue section-sparse-triangles">
 			<div class="row h-left">
-				<div id="partner-day" class="col md-4">
+				<div id="partner-day" class="col md-6">
 					<div class="special-event-box">
 						<div class="header-box five-k bullet-group">
 							<h3 class="h2 text-medium text-normal ">Partner Forum</h3>
@@ -178,22 +141,7 @@
 					</div>
 				</div>
 
-				<div class="col md-4">
-					<div class="special-event-box">
-						<div class="header-box womens-networking bullet-group">
-							<h3 class="h2 text-medium text-normal">Women in Technology Panel & Networking</h3>
-							<div class="text-label orange margin-top-10">Networking Event</div>
-
-							<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow MicroStrategy customers, partners, and employees&mdash;and celebrate at a networking cocktail reception.</p>
-							<div class="triangle-group orange margin-top-10">
-								<p><strong>Tuesday, February 5</strong><br>
-								4:00pm - 6:00pm</p>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col md-4">
+				<div class="col md-6">
 					<div class="special-event-box">
 						<div class="header-box womens-networking bullet-group">
 								<h3 class="h2 text-medium text-normal">Executive Forum</h3>
@@ -203,6 +151,40 @@
 							<div class="triangle-group orange margin-top-10">
 								<p><strong>Tuesday, February 5</strong><br>
 								9:00am - 4:00pm</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="background-gradient-red">
+			<div class="row h-left z-1">
+				<div class="col md-6">
+					<div class="special-event-box">
+						<div class="header-box womens-networking bullet-group">
+							<h3 class="h2 text-medium text-normal">Women in Technology Panel & Networking</h3>
+							<div class="text-label orange margin-top-10">Networking Event</div>
+
+							<p>MicroStrategy customers, partners, and employees will have an opportunity to meet with and hear from inspiring women leaders and savvy female executives and learn about their great work across the world of analytics. This event is sponsored by Exasol.</p>
+							<div class="triangle-group orange margin-top-10">
+								<p><strong>Tuesday, February 5</strong><br>
+								4:00pm - 6:00pm</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col md-6">
+					<div class="special-event-box">
+						<div class="header-box womens-networking bullet-group">
+							<h3 class="h2 text-medium text-normal">MicroStrategy Fitness Bootcamp Benefiting STEM for Her</h3>
+							<div class="text-label orange margin-top-10">Networking Event</div>
+
+							<p>New year, new challenge! MicroStrategy will sponsor and co-host a Fitness Bootcamp with Datastrong, a BI and data warehousing solutions provider, on Tuesday, February 5 from 6:30 a.m. to 7:30 a.m. All proceeds from the event will benefit <span class="text-bold">STEM for Her</span>, a non-profit foundation that supports young women and girls in the Washington D.C. region who are interested in pursuing careers in science, technology, engineering and math fields of study. </p>
+							<p>The Fitness Bootcamp will be an hour-long workout that will utilize body weight exercises to give you a maximum burn.  Spots are limited so register to reserve your spot and kick off your World 2019 with a bang. Select the available option during World 2019 registration.</p>
+							<div class="triangle-group orange margin-top-10">
+								<p><strong>Tuesday, February 5</strong><br>
+								6:30am - 7:30am</p>
 							</div>
 						</div>
 					</div>
@@ -239,7 +221,7 @@
 		<section class="background-navy section-square-dots">
 			<div class="row h-left z-1">
 
-				<div id="Dossier" class="col md-6">
+				<div id="Dossier" class="col md-3">
 					<div class="special-event-box">
 						<div class="header-box dossier bullet-group">
 							<h3 class="h2 text-medium text-normal">Dossier Contest</h3>
@@ -253,7 +235,38 @@
 					</div>
 				</div>
 
-				<div id="customer-awards" class="col md-6">
+				<div id="datathon" class="col md-6">
+						<div class="special-event-box">
+							<div class="header-box datathon bullet-group">
+								<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
+								<div class="text-label navy margin-top-10">Contest</div>
+								<p>MicroStrategy Datathon 2019 is a friendly, team-based competition hosted during the first two days of the World 2019 conference in Phoenix, AZ. Registered teams will compete head-to-head in the main exhibit hall at the center of all the action using the MicroStrategy platform and a provided data-set to create an innovative solution, with the aid of MicroStrategy Professionals and specialists. Teams will also have the opportunity to show their finished products to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! Other prizes will also consist of a “People’s Choice Award” and a “Lone-Wolf Prize”.</p>
+								<div class="row collapse">
+										<div class="col md-4">
+											<div class="margin-top-10">
+												<p><strong>Monday, February 4</strong><br>
+												8:00am - 7:30pm</p>
+											</div>
+										</div>
+										<div class="col md-4">
+											<div class="margin-top-10">
+												<p><strong>Tuesday, February 5</strong><br>
+													8:00am - 6:00pm</p>
+											</div>
+										</div>
+										<div class="col md-4">
+											<div class="margin-top-10">
+												<p><strong>Wednesday, February 6</strong><br>
+													8:00am - 3:00pm</p>
+											</div>
+										</div>
+									</div>
+								<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button orange carat small margin-top-10">Submit Application</a>
+							</div>
+						</div>
+					</div>
+
+				<div id="customer-awards" class="col md-3">
 					<div class="special-event-box">
 						<div class="header-box datathon bullet-group">
 							<h3 class="h2 text-medium text-normal">Customer Awards</h3>
@@ -273,36 +286,7 @@
 					</div>
 				</div>
 
-				<div id="datathon" class="col md-9">
-					<div class="special-event-box">
-						<div class="header-box datathon bullet-group">
-							<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
-							<div class="text-label navy margin-top-10">Contest</div>
-							<p>MicroStrategy Datathon 2019 is a friendly, team-based competition hosted during the first two days of the World 2019 conference in Phoenix, AZ. Registered teams will compete head-to-head in the main exhibit hall at the center of all the action using the MicroStrategy platform and a provided data-set to create an innovative solution, with the aid of MicroStrategy Professionals and specialists. Teams will also have the opportunity to show their finished products to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! Other prizes will also consist of a “People’s Choice Award” and a “Lone-Wolf Prize”.</p>
-							<div class="row collapse">
-									<div class="col md-4">
-										<div class="triangle-group navy margin-top-10">
-											<p><strong>Monday, February 4</strong><br>
-											8:00am - 7:30pm</p>
-										</div>
-									</div>
-									<div class="col md-4">
-										<div class="triangle-group navy margin-top-10">
-											<p><strong>Tuesday, February 5</strong><br>
-												8:00am - 6:00pm</p>
-										</div>
-									</div>
-									<div class="col md-4">
-										<div class="triangle-group navy margin-top-10">
-											<p><strong>Wednesday, February 6</strong><br>
-												8:00am - 3:00pm</p>
-										</div>
-									</div>
-								</div>
-							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button orange carat small margin-top-10">Submit Application</a>
-						</div>
-					</div>
-				</div>
+
 
 			</div>
 		</section>
