--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -42,10 +42,6 @@
 					<h2>Venue</h2>
 					<p class="h3">MicroStrategy World 2019 will be hosted at the beautiful Phoenix Convention Center in the heart of Arizona.</p>
 					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor International Airport. The center is within walking distance of major convention hotels, shopping, entertainment, sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
-					<!-- <h3 class="text-uppercase text-normal text-small">Air Travel</h3>
-					<p>The Phoenix Convention Center is four miles from <a class="text-white" href="https://www.skyharbor.com/">Sky Harbor International Airport</a>. Guests flying into Phoenix have multiple transportation options, including the Metro Light Rail, which has dedicated stops at the Convention Center.</p>
-					<p><strong>Sky Harbor International Airport</strong></p>
-					<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p> -->
 				</div>
 			</div>
 		</section>
@@ -53,7 +49,7 @@
 			<div class="row no-padding h-center">
 				<div class="col md-7 text-center">
 					<h2>Lodging</h2>
-					<p class="h3">MicroStrategy has secured room blocks at the Sheraton and Renaissance in downtown Phoenix. Book your room now to secure best pricing and availability!</p>
+					<p class="h3">MicroStrategy has secured room blocks at the following hotels in downtown Phoenix. Book your room now to secure best pricing and availability!</p>
 				</div>
 			</div>
 			<div class="row photo-row large expand collapse">
@@ -73,7 +69,7 @@
 						<h3 class="text-uppercase text-normal marginup5">Hampton Inn & Suites Phoenix Downtown</h3>
 						<p>77 East Polk Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-710-1240" class="text-white">602-710-1240</a></p>
-						<p>Website: <a href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" class="text-white" target="_blank">Hampton Inn & Suites</a></p>
+						<p>Website: <a href="https://secure3.hilton.com/en_US/hp/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHXCTHX&spec_plan=CHHMSW&arrival=20190131&departure=20190208&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" class="text-white" target="_blank">Hampton Inn & Suites</a></p>
 
 						<p>Stay at Hampton Inn & Suites Phoenix Downtown and be just steps from it all. Walk to events at Phoenix Convention Center, restaurants at CityScape, Suns games at Talking Stick Resort Arena, and Diamondbacks games at Chase Field – all within a mile of the hotel.</p>
 						<div class="line tiny blue thick"></div>
@@ -84,7 +80,7 @@
 							<li>Pool/fitness center</li>
 							<li>Laundry/Valet Service</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" target="_blank">Book your room online</a>
+						<a class="cta-button navy carat large" href="https://secure3.hilton.com/en_US/hp/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHXCTHX&spec_plan=CHHMSW&arrival=20190131&departure=20190208&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" target="_blank">Book your room online</a>
 					</div>
 				</div>
 
@@ -112,8 +108,8 @@
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Hilton Garden Inn Phoenix Downtown</h3>
 						<p>15 East Monroe Street <br> Phoenix, Arizona, 85004</p>
-						<p>Phone: <a href="tel:602-343-0006" class="text-white">602-343-0006</a></p>
-						<p>Website: <a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
+						<p>Phone: <a href="tel:602-396-7161" class="text-white">602-396-7161</a></p>
+						<p>Website: <a href="https://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml?WT.mc_id=POG" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
 						<p><strong>Room rate $249</strong></p>
 						<p>Built in 1932, our Phoenix hotel features original Art Deco design and a grand lobby with restored columns and marble touches. Enjoy the easy ambience of Monroe's lobby bar, breakfast in our Garden Grille restaurant, or a savory dinner at Nook Kitchen.</p>
 						<div class="line tiny blue thick"></div>
@@ -124,7 +120,7 @@
 							<li>24 hr Pavilion Pantry Market</li>
 							<li>Laundry/Valet Service</li>
 						</ul>
-						<a class="cta-button navy carat large" href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" target="_blank">Book your room online</a>
+						<a class="cta-button navy carat large" href="https://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml?WT.mc_id=POG" target="_blank">Book your room online</a>
 					</div>
 				</div>
 			</div>
