--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -31,6 +31,61 @@
                 <img alt="" class="static-pattern pos-top pos-right-neg-70" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
             </div>
         </section>
+
+        <!-- App Callout  -->
+        <section id="app-callout" class="background-green">
+                <div class="row h-left z-1">
+                    <div class="col lg-6">
+                        <h2 class="text-uppercase">Experience World 2019 on the Go</h2>
+                        <p class="h4">Features:</p>
+                        <div class="row h-left collapse padding-top-30">
+                            <div class="col md-6">
+                                <ul>
+                                    <li>View and create a personalized schedule of sessions</li>
+                                    <li>Learn about speakers, partners, and exhibitors</li>
+                                    <li>Explore maps of the exhibit hall, convention center and Phoenix highlights</li>
+                                </ul>
+                            </div>
+                            <div class="col md-6">
+                                <ul>
+                                    <li>Get walking directions to rooms and points of interest during the convention</li>
+                                    <li>Interact with attendees via social media and Badge</li>
+                                    <li>Embedded HyperIntelligence and HyperVision</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        </ul>
+
+                        <div class="row h-left collapse padding-top-30">
+                            <div class="col md-4">
+                                <p class="text-label">Get it for iPhone:</p>
+                                <div>
+                                    <a href="https://itunes.apple.com/us/app/microstrategy-world-for-iphone/id888698281"><img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/44d091e4c269494c9326e51c9a1e6622.png" alt="Apple iPhone App Store Badge" class="ios badge"/></a>
+                                </div>
+                            </div>
+                            <div class="col md-4">
+                                <p class="text-label">Get it for iPad:</p>
+                                <div>
+                                    <a href="https://itunes.apple.com/us/app/microstrategy-world-for-ipad/id888525116?mt=8"><img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/44d091e4c269494c9326e51c9a1e6622.png" alt="Apple iPad App Store Badge" class="ios badge"/></a>
+                                </div>
+                            </div>
+                            <div class="col md-4">
+                                <p class="text-label">Get it for Android</p>
+                                <div>
+                                    <a href="https://play.google.com/store/apps/details?id=com.microstrategy.android.world&hl=en_US"><img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/81c4d46a20e146c6b4ae473c53549730.png" alt="Google Play Store Badge" class="google badge"/></a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col lg-6">
+                        <img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8cc07d3817d640848910478196d8f0a7.png"
+                            alt="MicroStrategy World 2019 App mockup" >
+                    </div>
+                </div>
+            </section>
+
         <section class="weather no-padding">
             <div class="row expand">
                 <div class="col">
@@ -43,7 +98,6 @@
                 <div class="col md-3 background-light-gray">
                     <h3 class="text-normal h4">Don't forget to: </h3>
                     <ul class="text-bold">
-                        <h5 class="text-red"><em>Book your hotel before January 15 to get the MicroStrategy rate!</em></h5>
                         <li>Make your hotel reservation at the Sheraton Grand Phoenix<br>
                             <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
                             <a class="cta-button blue small" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book Your Room</a>
@@ -52,7 +106,7 @@
 
                         <li>Hampton Inn & Suites Phoenix Downtown<br>
                             <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
-                            <a class="cta-button blue small" href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" target="_blank">Book Your Room</a>
+                            <a class="cta-button blue small" href="https://secure3.hilton.com/en_US/hp/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHXCTHX&spec_plan=CHHMSW&arrival=20190131&departure=20190208&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" target="_blank">Book Your Room</a>
                         </li>
                         <br>
 
@@ -64,7 +118,7 @@
 
                         <li>Hilton Garden Inn Phoenix Downtown<br>
                             <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
-                            <a class="cta-button blue small" href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" target="_blank">Book Your Room</a>
+                            <a class="cta-button blue small" href="https://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml?WT.mc_id=POG" target="_blank">Book Your Room</a>
                         </li>
                         <br>
 
@@ -154,35 +208,79 @@
         </section>
 
         <section id="call-to-action">
-                <div class="final-cta">
-                    <div class="row">
-                        <img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0">
-                    </div>
-                    <a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
+            <div class="final-cta">
+                <div class="row">
+                    <img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0">
                 </div>
+                <a class="cta-button large red expand reg-link" href="{[E-RSVP YES URL]}">Register now</a>
+            </div>
 
-                <div class="final-date">
-                    <div class="icon-lockup text-white">
-                        <img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32">
-                        <p>
-                            <strong class="text-uppercase text-bold text-white">February</strong>
-                            4th – 6th 2019
-                        </p>
-                    </div>
-                    <div class="icon-lockup text-white">
-                        <img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32">
-                        <p>
-                            <strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
-                            Phoenix Convention Center
-                        </p>
-                    </div>
+            <div class="final-date">
+                <div class="icon-lockup text-white">
+                    <img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32">
+                    <p>
+                        <strong class="text-uppercase text-bold text-white">February</strong>
+                        4th – 6th 2019
+                    </p>
                 </div>
-            </section>
-
+                <div class="icon-lockup text-white">
+                    <img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32">
+                    <p>
+                        <strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
+                        Phoenix Convention Center
+                    </p>
+                </div>
+            </div>
+        </section>
     </div>
     {[E-CUSTOM TAG:SCRIPT-REGLINKFIX]}
     {[E-CUSTOM TAG:SCRIPT-WEATHER-WIDGET]}
     <style>
+        #app-callout {
+                background-image: url(https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3c638eefc71a4cf6a341d265fce561ba.png);
+                background-attachment: fixed;
+                background-blend-mode:soft-light;
+                background-position: 0;
+                background-repeat: repeat;
+            }
+            .badge {
+                width: 50%;
+            }
+            .ios.badge {
+                padding: 10px 0
+            }
+            .google.badge {
+                width: 58%;
+                margin-left: -10px;
+            }
+
+            .info-box img {
+                width: 30%;
+            }
+
+            @media (min-width: 768px) {
+                .badge {
+                width: 60%;
+                }
+                .ios.badge {
+                    padding: 10px 0
+                }
+                .google.badge {
+                    width: 75%;
+                    margin-left: -10px;
+                }
+            }
+            @media (min-width: 1100px) {
+                .badge {
+                width: 70%;
+                }
+                .ios.badge {
+                    padding: 10px 0
+                }
+                .google.badge {
+                    width: 90%;
+                }
+            }
         .card {
             height: 200px;
         }
