--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -45,51 +45,14 @@
 
 		<section id="meetings" class="background-green section-stacked-bars">
 			<div class="row h-left z-2">
-				<div class="col md-10 lg-9 xl-8">
-					<div class="bullet-group large">
-						<h2 class="h3 text-uppercase text-bold">Meetings</h2>
-						<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
-							work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
-						<a class="cta-button navy small carat" href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915"
-							target="_blank">Schedule Your Meeting Now</a>
-					</div>
+				<div class="col md-9 xl-8">
+						<h2 class="h3 text-uppercase text-bold">Upgrade Consultations, Tech Talks & Solution Talks</h2>
+						<p class="h4">Now that you’re registered for World, it’s time to start thinking about how to maximize your time in Phoenix. Book your Upgrade Consultation  to maximize your MicroStrategy 2019 experience. Reserve a Tech Talk to get expert feedback and accomplish your digital transformation goals faster. Meet with one of our executives  at a Solution Talk and learn how they utilize the MicroStrategy platform to enhance their day to day operations.</p>
 				</div>
-			</div>
-
-			<div class="row between margin-top-30 z-2">
-				<div class="col md-9">
-					<div class="bullet-group">
-						<h5 class="text-uppercase text-bold">1:1 MicroStrategy 2019 Consultation</h5>
-						<p>Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
-							your MicroStrategy 2019 experience. Learn more about how your organization can take advantage of the powerful
-							new functionalities available since the last platform release, including HyperIntelligence, the enterprise
-							semantic graph, dossiers, library and much more.</p>
-						<p>In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
-							also talk about new features like testing automation in the platform that help you upgrade. We’ll also discuss
-							how you can schedule a complimentary one-week Upgrade Advisory--where we send an expert to your location to help
-							conduct sandbox upgrading testing, build and deploy a HyperIntelligence pilot, and provide a detailed feature
-							value map and clear recommendations for a smooth upgrade.</p>
-					</div>
-				</div>
-				<div class="col md-6">
-					<div class="bullet-group">
-						<h5 class="text-uppercase text-bold">Solution Talks at World 2019</h5>
-						<p>New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
-							one-on-one with one of our executives to learn how numerous departments in MicroStrategy use our platform. Have
-							an interactive discussion, collaborate over strategies to apply a data-driven approach to your department, and
-							get detailed answers to any questions you may have.</p>
-						<a href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
-					</div>
-				</div>
-				<div class="col md-6">
-					<div class="bullet-group">
-						<h5 class="text-uppercase text-bold">Tech Talks at World 2019</h5>
-						<p>TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
-							dive on a variety of topics related to leveraging the MicroStrategy platform. Join our experts for an in-depth
-							conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.</p>
-						<a href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
-					</div>
-
+				<div class="col md-3 xl-4">
+						<a class= "cta-button navy small carat" href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019">Learn More about Tech Talks</a>
+						<a class="cta-button red small carat"  href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019">Learn More about Solution Talks</a>
+						<a href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915?mkt_tok=eyJpIjoiT1RWbE9XVTBOVGM1TUdZNCIsInQiOiJvQno0YUFoWklWZjZ1eVBnUFdta25tNmREMVRGWG42TGZDWHhqMWJkbFVBQ2NjVjJGNFVJVFB5R1FhZENmOEowOEZuRldpU1NkR3VGWWN1WE1hclwvcEE9PSJ9" class="cta-button blue carat">Register Today</a>
 				</div>
 			</div>
 			<div class="pattern-overlay z-1">
