Using Luxon library for timezone issue

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -8,7 +8,7 @@
 	<title>Session New Test</title>
 	<link rel="stylesheet" href="../CSS/min/main.min.css">
 	<style type="text/css">
-		.hide{ display: none;}
+		.hide { display: none; }
 	</style>
 </head>
 
@@ -48,10 +48,12 @@
 				<div class="col md-10 lg-9 xl-8">
 					<div class="bullet-group large">
 						<h2 class="h3 text-uppercase text-bold">Meetings</h2>
-						<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
-							work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
+						<p class="h4">
+							Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
+							work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.
+						</p>
 						<a class="cta-button navy small carat" href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915"
-							target="_blank">Schedule Your Meeting Now</a>
+						   target="_blank">Schedule Your Meeting Now</a>
 					</div>
 				</div>
 			</div>
@@ -60,33 +62,41 @@
 				<div class="col md-9">
 					<div class="bullet-group">
 						<h5 class="text-uppercase text-bold">1:1 MicroStrategy 2019 Consultation</h5>
-						<p>Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
+						<p>
+							Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
 							your MicroStrategy 2019 experience. Learn more about how your organization can take advantage of the powerful
 							new functionalities available since the last platform release, including HyperIntelligence, the enterprise
-							semantic graph, dossiers, library and much more.</p>
-						<p>In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
+							semantic graph, dossiers, library and much more.
+						</p>
+						<p>
+							In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
 							also talk about new features like testing automation in the platform that help you upgrade. We’ll also discuss
 							how you can schedule a complimentary one-week Upgrade Advisory--where we send an expert to your location to help
 							conduct sandbox upgrading testing, build and deploy a HyperIntelligence pilot, and provide a detailed feature
-							value map and clear recommendations for a smooth upgrade.</p>
+							value map and clear recommendations for a smooth upgrade.
+						</p>
 					</div>
 				</div>
 				<div class="col md-6">
 					<div class="bullet-group">
 						<h5 class="text-uppercase text-bold">Solution Talks at World 2019</h5>
-						<p>New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
+						<p>
+							New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
 							one-on-one with one of our executives to learn how numerous departments in MicroStrategy use our platform. Have
 							an interactive discussion, collaborate over strategies to apply a data-driven approach to your department, and
-							get detailed answers to any questions you may have.</p>
+							get detailed answers to any questions you may have.
+						</p>
 						<a href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
 					</div>
 				</div>
 				<div class="col md-6">
 					<div class="bullet-group">
 						<h5 class="text-uppercase text-bold">Tech Talks at World 2019</h5>
-						<p>TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
+						<p>
+							TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
 							dive on a variety of topics related to leveraging the MicroStrategy platform. Join our experts for an in-depth
-							conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.</p>
+							conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.
+						</p>
 						<a href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
 					</div>
 
@@ -115,8 +125,8 @@
 								<i class="fa fa-pencil jplist-icon"></i>
 
 								<!-- [if lt IE 10]>
-				<div class="jplist-label">Search:</div>
-			<![endif] -->
+									<div class="jplist-label">Search:</div>
+								<![endif] -->
 
 								<input data-path=".session-title" type="text" value="" class="jplist-no-right-border" placeholder="Search" data-control-type="textbox" data-control-name="title-filter" data-control-action="filter" />
 
@@ -321,6 +331,7 @@
 	<script type="text/javascript" src="https://www.microstrategy.com/CMSTemplates/microstrategy/bower_components/jplist/dist/js/jplist.filter-toggle-bundle.min.js"></script>
 	<script type="text/javascript" src="https://www.microstrategy.com/CMSTemplates/microstrategy/bower_components/jquery.cookie/jquery.cookie.js"></script>
 	<script type="text/javascript" src="https://www.microstrategy.com/CMSTemplates/microstrategy/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+	<script type="text/javascript" src="https://moment.github.io/luxon/global/luxon.min.js"></script>
 
 	<!-- {[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-1]}
 	{[E-CUSTOM TAG:AGENDA-BUILDER-SCRIPT-2]}
